--- a/style.css
+++ b/style.css
@@ -1,6 +1,14 @@
 /* GLOBAL */
+
+*{
+    /*Corrigindo uma propriedade padrao*/
+    box-sizing: border-box;
+}
 html, body{
     margin: 0;
+}
+h1, h2{
+    color: #000000cc;
 }
 body{
     display: flex;
@@ -11,6 +19,8 @@ body{
 
     /*fonte*/
     font-family: 'Roboto', sans-serif;
+    
+    background-color: #f9f9f9;
 }
 
 /* TITULOS */
@@ -18,8 +28,14 @@ header h1, main h2{
     margin-bottom: 70px;
 }
 
+main h2 span{
+    color: #ff4f4f;
+}
+
 .form h2{
     text-align: right;
+    color: #ffffffee;
+    font-size: 18px;
 }
 
 /* ESTRUTURA */
@@ -39,16 +55,33 @@ header, .form, main{
 
 /*HEADER*/
 header button{
+    margin-top: 16px;
     padding: 8px 16px;
     border-radius: 4px;
+    border: none;
+
+    background-color: #ff4f4f;
+    color: #fff;
+
+    font-weight: bold;
 }
 
 /* FORM */
 section.form{
     display: grid;
     grid-template-columns: 1fr 1fr;
+
     /*Espaçamento do grid*/
     grid-gap: 45px;
+
+    /*Alinhamentos do grid*/
+    align-items: center;
+
+    background-color: #ff4f4f;
+
+    padding: 16px 64px;
+
+    border-radius: 6px;
 }
 
 form input,
@@ -59,17 +92,25 @@ form button{
     /*Espaçamento*/
     margin-bottom: 4px;
 
-    /*Corrigindo uma propriedade padrao*/
-    box-sizing: border-box;
-
     /*preenchimentos*/
     padding: 8px 16px;
 
     /*bordas*/
     border-radius: 4px;
-    border: 1px red solid;
+    border: 1px #ffffff88 solid;
 }
 
+form input{
+    background-color: transparent;
+}
+
+form input::placeholder{
+    color: #ffffffaa;
+}
+
+form button{
+    font-weight: bold;
+}
 
 /* MAIN */
 main .donors{
