--- a/style.css
+++ b/style.css
@@ -66,6 +66,11 @@ header button{
     font-weight: bold;
 }
 
+.logo{
+    width: 120px;
+    margin: 70px 0 ;
+}
+
 /* FORM */
 section.form{
     display: grid;
